--- a/templates/geoip_conf.j2
+++ b/templates/geoip_conf.j2
@@ -4,10 +4,10 @@
 # https://dev.maxmind.com/geoip/updating-databases?lang=en.
 
 # `AccountID` is from your MaxMind account.
-AccountID {{ maxmind.id }}
+AccountID {{ bastion.maxmind.id }}
 
 # `LicenseKey` is from your MaxMind account
-LicenseKey {{ maxmind.key }}
+LicenseKey {{ bastion.maxmind.key }}
 
 # `EditionIDs` is from your MaxMind account.
 EditionIDs GeoLite2-ASN GeoLite2-City GeoLite2-Country
