fixed typo in ipv6 snmpd community

--- a/templates/snmpd_conf.j2
+++ b/templates/snmpd_conf.j2
@@ -18,4 +18,4 @@ view   all         included   .1
 #view   systemonly  included   .1.3.6.1.2.1.25.1
 
 rocommunity  {{ router.snmp.community | default('public') }} default -V all
-rocommunity6 {{ router.snmp.community | default('public') }} public default -V all
+rocommunity6 {{ router.snmp.community | default('public') }} default -V all
