--- a/templates/strongswan_secrets.j2
+++ b/templates/strongswan_secrets.j2
@@ -2,5 +2,6 @@
 
 {% for item in interface|list %}{% if item.startswith('vti') %}
 {% set intf = interface | json_query(item) %}
-{{ intf.remote }} : PSK "{{ intf.psk }}"
-{% endif %}{% endfor %}
+{% for word in intf.inet.config.split() if "." in word %}{% set remote = word %}
+{{ remote }} : PSK "{{ intf.psk }}"
+{% endfor %}{% endif %}{% endfor %}
