--- a/templates/radvd_conf.j2
+++ b/templates/radvd_conf.j2
@@ -11,4 +11,7 @@ interface {{ router.dhcp.interface }} {
      AdvValidLifetime 3600;
      AdvPreferredLifetime 3600;
    };
+   RDNSS 2606:4700:4700::1113 2606:4700:4700::1003 {
+     AdvRDNSSLifetime 3600;
+   };
 };
